# jak-disassembler

./: .clang-format  .gitattributes  .gitignore  Api.cpp  Api.h  CMakeLists.txt  CMakeSettings.json  LinkedObjectFile.cpp  LinkedObjectFile.h  LinkedObjectFileCreation.cpp  ObjectFileDB.cpp  ObjectFileDB.h  README.md  config.cpp  config.h  game_version.cpp  game_version.h  main.cpp
Disasm/: Instruction.cpp  Instruction.h  InstructionDecode.cpp  InstructionMatching.cpp  InstructionMatching.h  Register.cpp  Register.h
Function/: BasicBlocks.cpp  BasicBlocks.h  CfgVtx.cpp  CfgVtx.h  Function.cpp  Function.h
ObjectFile/: LinkedObjectFile.cpp  LinkedObjectFileCreation.cpp  ObjectFileDB.cpp
TypeSystem/: TypeInfo.cpp  TypeInfo.h  TypeSpec.h
config/: jak1_ntsc_black_label.jsonc  jak2_ntsc_v1.jsonc  jak3_ntsc.jsonc
gui/: App.cpp  App.h  MainFrame.cpp  MainFrame.h  test.cpp  wxGlade.wxg
util/: BinaryReader.h  FileIO.cpp  LispPrint.cpp  LispPrint.h  Log.cpp  Log.h  Timer.cpp  Timer.h
